extract database folder from phpMyAdmin

--- a/HairSalon/Views/Stylists/Details.cshtml
+++ b/HairSalon/Views/Stylists/Details.cshtml
@@ -15,6 +15,6 @@
   </ol>
 }
 
-
+<p><a href='/stylists/clients/new'>Add New Client</a></p>
 <p><a href="/stylists">Back to Stylist's List</a></p>
 <p><a href='/'>back Home</a></p>
