--- a/HairSalon/Views/Clients/CreateForm.cshtml
+++ b/HairSalon/Views/Clients/CreateForm.cshtml
@@ -12,7 +12,8 @@
 <form action='/clients' method='post'>
 
   <label for='clientName'>Client name</label>
-  <input id='clientName' name='clientName' type='text'>
+  <input id='clientsName' name='clientsName' type='text'>
+  <input id = 'stylistId' name='stylistId' type = 'hidden' value = @Model.GetId()>
 
   <button type='submit'>Add Client</button>
 </form>
