--- a/HairSalon/Views/Stylists/CreateForm.cshtml
+++ b/HairSalon/Views/Stylists/CreateForm.cshtml
@@ -1,10 +1,13 @@
 @{
   Layout = "_Layout";
 }
-
+<div class="container">
+<h1>Add a new Stylist: </h1>
 <form action='/stylists' method='post'>
   <label for='stylistName'>Stylist Name</label>
   <input id='stylistName' name='stylistName' type='text'>
-
-  <button type='submit'>Add Stylist</button>
+ <br>
+ <br>
+  <button class="btn btn-danger" type='submit'>Add Stylist</button>
 </form>
+</div>
