--- a/HairSalon/Views/Clients/Index.cshtml
+++ b/HairSalon/Views/Clients/Index.cshtml
@@ -1,14 +1,24 @@
 @{
   Layout = "_Layout";
 
-  <p>I'm showing the clients list!</p>
 }
+<div class="container">
+  <h1>List of clients: </h1>
 
+  @if(Model.Count == 0)
+  {
+    <p>No clients has been added yet</p>
+  }
+  else
+  {
+    @foreach(var client in Model)
+    {
+      <ul>
+        <li><a href = "/clients/@client.id">@client.name</a></li>
+      </ul>
+    }
+  }
 
+<a href = "/" class="btn btn-danger">Home</a>
 
-@foreach(var client in Model)
-{
-  <ul>
-    <li><a href = "/clients/@client.id">@client.name</a></li>
-  </ul>
-}
+</div>
