--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -4,8 +4,7 @@
 
 <div class="container">
 
-<h1>Welcome!</h1>
-<!-- <a href="/clients" class="btn btn-info">You can start your clients search by stores here!</a> -->
+<h1>Welcome, Friend!</h1>
 <a href="/stylists" class="btn btn-info">Show list of stylists!</a>
-
+<a href="/specialties" class="btn btn-primary">Show list of specialties!</a>
 </div>
