--- a/HairSalon/Views/Stylists/Details.cshtml
+++ b/HairSalon/Views/Stylists/Details.cshtml
@@ -3,7 +3,15 @@
 
 }
 
+<div class="container">
+<h1>List of clients: </h1>
 
+@if(Model.Count == 0)
+{
+  <p>No clients has been added yet</p>
+}
+else
+{
 <ol>
 @foreach (var client in Model["Stylist"].GetClient())
 
@@ -12,6 +20,10 @@
 }
 
 </ol>
-<p><a href='/stylists/@Model["Stylist"].GetId()/clients/new'>Add New Client</a></p>
-<p><a href="/stylists">Back to Stylist's List</a></p>
-<p><a href='/'>back Home</a></p>
+}
+<p><a href='/stylists/@Model["Stylist"].GetId()/clients/new' class="btn btn-success">Add New Client</a></p>
+<a href="/stylists" class="btn btn-warning">Back to Stylist's List</a>
+<br>
+<br>
+<a href = "/" class="btn btn-danger">Home</a>
+</div>
