--- a/HairSalon/Views/Stylists/Index.cshtml
+++ b/HairSalon/Views/Stylists/Index.cshtml
@@ -1,7 +1,7 @@
 @{
   Layout = "_Layout";
 }
-
+<div class="container">
 <h1>Stylists</h1>
 @if (@Model.Count == 0)
 {
@@ -13,5 +13,6 @@
 <h4><a href='/stylists/@stylist.GetId()'>@stylist.GetName()</a></h4>
 }
 
-<p><a href="/stylists/new">Add new Stylist</a></p>
-<p><a href="/">back Home</a></p>
+<p><a href="/stylists/new" class="btn btn-info">Add new Stylist</a></p>
+<p><a href="/"class="btn btn-danger" >back Home</a></p>
+</div>
