add AddStylist method

--- a/HairSalon/Views/Specialties/CreateForm.cshtml
+++ b/HairSalon/Views/Specialties/CreateForm.cshtml
@@ -10,8 +10,8 @@
 <h1>Please enter Today's Special Deal: </h1>
 <form action='/specialties' method='post'>
 
-  <label for='specialtyDescription'>Specialty Description:</label>
-  <input id='specialtyDescription' name='specialtyDescription' type='text'>
+  <label for='description'>Specialty Description:</label>
+  <input id='description' name='description' type='text'>
   
 <br>
 <br>
