add link to thwe Specialties

--- a/HairSalon/Views/Stylists/Details.cshtml
+++ b/HairSalon/Views/Stylists/Details.cshtml
@@ -21,7 +21,11 @@ else
 
 </ol>
 }
+
+<h2><a href="/specialties" >I'm pretty sure that you can use our special offer today</a></h2>
+
 <p><a href='/stylists/@Model["Stylist"].GetId()/clients/new' class="btn btn-success">Add New Client</a></p>
+<a href="/stylists" class="btn btn-warning">Back to Stylist's List</a>
 <a href="/stylists" class="btn btn-warning">Back to Stylist's List</a>
 <br>
 <br>
