fix styists_clients DB table

--- a/HairSalon/Views/Clients/CreateForm.cshtml
+++ b/HairSalon/Views/Clients/CreateForm.cshtml
@@ -8,7 +8,7 @@
 
 
 <h1>Please enter a client name: </h1>
-<form action='/clients' method='post'>
+<form action='/stylists/@Model.GetId()/clients/new' method='post'>
 
   <label for='clientName'>Client name</label>
   <input id='clientsName' name='clientsName' type='text'>
