--- a/HairSalon/Views/Specialties/Details.cshtml
+++ b/HairSalon/Views/Specialties/Details.cshtml
@@ -33,4 +33,7 @@
   <button type='submit' class = 'btn btn-danger' >Add stylist</button>
 </form>
 <a href = "/" class="btn btn-danger">Home</a>
+<br/>
+<br/>
+<a href="/specialties/@Model["selectedSpecialty"].GetId()/delete" class = 'btn btn-danger'>Delete Specialty</a>
 </div>
